<resources>
    <string name="app_name">Cookbook</string>
    <string name="arrow"><![CDATA[>]]></string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="newText">New</string>
    <string name="explore">Explore</string>
    <string name="textview">TextView</string>
    <string name="line">______________________</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="autocomplete_recipe_info"><u>Autocomplete Recipe Info</u></string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="save_amp_upload_recipe"><![CDATA[Save & Upload Recipe]]></string>
    <string name="add_step">Add Step</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="enter_ingredient">Enter Ingredient</string>
    <string name="enter_step">Enter Step</string>
    <string name="create_new_code"><u>Create New Code</u></string>
    <string name="sort_recipes_by">Sort Recipes By</string>
    <string name="enter_group_code">Enter Group Code</string>
    <string name="join_group">Join Group</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="attach_photo">Attach Photo</string>
    <string name="share">Share</string>
    <string name="open"><![CDATA[Open >]]></string>
    <string name="favorited">Favorited</string>
    <string-array name="sort_recipes">
        <item>Alphabetical</item>
        <item>Number of Steps</item>
        <item>Favorites</item>
    </string-array>
</resources>