<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3E7DB"
    tools:context=".SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="150dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/groupCodeText"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/enter_group_code"
                android:inputType="text" />

            <Button
                android:id="@+id/joinGroupButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:backgroundTint="#60310D"
                android:text="@string/join_group" />
        </LinearLayout>

        <TextView
            android:id="@+id/createCodeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#798945"
            android:textSize="16sp"
            android:text="@string/create_new_code" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginTop="70dp"
            android:textStyle="bold"
            android:text="@string/your_groups" />

        <LinearLayout
            android:id="@+id/groupCodeLayout"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>
    </LinearLayout>
</FrameLayout>